--- a/app/src/main/res/layout/activity_consulter_reservation.xml
+++ b/app/src/main/res/layout/activity_consulter_reservation.xml
@@ -8,8 +8,8 @@
 
     <LinearLayout
         android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_width="411dp"
+        android:layout_height="15dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
