--- a/app/src/main/res/layout/item_reservation.xml
+++ b/app/src/main/res/layout/item_reservation.xml
@@ -3,61 +3,39 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:padding="0dp"
-        android:text="id Reservation : " />
 
     <TextView
         android:id="@+id/idReservation"
-        android:layout_width="99dp"
+        android:layout_width="113dp"
         android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:padding="0dp" />
-
-    <TextView
-
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="date Preveu: "
         android:layout_margin="0dp"
         android:padding="0dp"
-        />
-
+        android:text="id Reservation : "
+        android:textStyle="normal" />
 
     <TextView
         android:id="@+id/datePrevueStockage"
-        android:layout_width="103dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:padding="0dp"/>
-
-    <TextView
-
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="date reservation: "
         android:layout_margin="0dp"
         android:padding="0dp"
-        />
+        android:text="date Prevu: " />
+
 
     <TextView
         android:id="@+id/dateReservation"
-        android:layout_width="102dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="0dp"
         android:padding="0dp" />
 
-    <TextView
+<!--    <TextView-->
 
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="nbJoours: "
-        android:layout_margin="0dp"
-        android:padding="0dp"/>
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="nbJoours: "-->
+<!--        android:layout_margin="0dp"-->
+<!--        android:padding="0dp"/>-->
 
     <TextView
         android:id="@+id/nbJoursStockagePrevu"
@@ -67,13 +45,13 @@
         android:padding="0dp" />
 
 
-    <TextView
+<!--    <TextView-->
 
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="quantite: "
-        android:layout_margin="0dp"
-        android:padding="0dp"/>
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="quantite: "-->
+<!--        android:layout_margin="0dp"-->
+<!--        android:padding="0dp"/>-->
 
     <TextView
         android:id="@+id/quantite"
@@ -83,13 +61,13 @@
         android:padding="0dp"
         />
 
-    <TextView
+<!--    <TextView-->
 
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="etat: "
-        android:layout_margin="0dp"
-        android:padding="0dp"/>
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="etat: "-->
+<!--        android:layout_margin="0dp"-->
+<!--        android:padding="0dp"/>-->
     <TextView
         android:id="@+id/etat"
         android:layout_width="100dp"
